# natty-sh-hug-generator

./: Cargo.toml  README.md  test.sh
assets/: adjectives.txt  lines.txt  test.html  valid_times.txt
src/: lib.rs
