[package]
name = "natty-sh-hug-generator"
version = "0.1.0"
edition = "2021"
authors = ["Natty"]
license = "MIT OR Apache-2.0"
description = "A cute hug generator"
repository = "https://github.com/natty-infra/natty-sh-hug-generator"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
cfg-if = "1"
log = "0.4"
console_log = "0.2"
pollster = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "ImageBitmap",
    "ImageData",
    "Blob",
    "CanvasRenderingContext2d"
]}
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]